# crostore

./: .pre-commit-config.yaml  README.md  pyproject.toml
.devcontainer/: .gitignore  compose.yml  devcontainer.json
.github/workflows/: test.yml
scripts/: test-selenium.sh
src/crostore/: __init__.py  abstract.py  config.py  core.py  exceptions.py
src/crostore/datasystems/: __init__.py  google_sheets.py
src/crostore/mailsystems/: __init__.py  gmail.py
tests/: conftest.py  test_core.py
tests/datasystems/: test_google_sheets.py
tests/mailsystems/: test_gmail.py
