[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "crostore"
description = "Enables to sell your products over platforms"
readme = "README.md"
requires-python = "~=3.10"
license = "MIT"
authors = [
  { name = "Shuhei Nitta", email = "huisintheta@gmail.com" }
]
keywords = []
classifiers = []
dependencies = [
  "selenium~=4.5.0",
]
dynamic = ["version"]

[project.urls]
Documentation = ""
Homepage = "https://github.com/huisint/crostore"

[project.optional-dependencies]
test = [
  "pytest~=7.2.0",
  "pytest-cov~=4.0.0",
  "pytest-describe~=2.0.1",
  "mypy~=1.0",
  "flake8~=6.0.0",
  "isort~=5.12.0",
  "black~=23.1.0",
]
dev = [
  "pre-commit~=3.0.4",
]
doc = []

[tool.hatch.version]
path = "src/crostore/__init__.py"

[tool.mypy]
python_version = "3.10"
strict = true

[[tool.mypy.overrides]]
module = []
ignore_missing_imports = true

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
addopts = "--cov=crostore"
testpaths = ["tests"]
